<resources>
    <string name="format">%1$td/%1$tm/%1$tY</string>


    <string name="app_name">BM Medical</string>
    <string name="action_login">Login</string>
    <string name="password">Password</string>
    <string name="oracle">Oracle Number</string>
    <string name="informations">Informations</string>
    <string name="medical_request">Medical Request</string>
    <string name="approval">Approvals and prescription</string>
    <string name="information_desc">Informations about BM Medical Service</string>
    <string name="medical_request_desc">Make new approval to get medical service</string>
    <string name="approval_desc">Get Approval or get a prescription</string>
    <string name="glass_grant">Glasses Grant</string>
    <string name="glasses_grant_desc">Informations About Glasses Grant</string>
    <string name="teeth_implant">Teeth Implant</string>
    <string name="teeth_implant_desc">Informations about Teeth Implant</string>
    <string name="childbirth_grant">Childbirth Grant</string>
    <string name="childbirth_grant_desc">Informations about Childbirth Grant</string>
    <string name="chronic_diseases">Chronic Diseases Status</string>
    <string name="chronic_diseases_desc">Informations about chronic diseases status</string>
    <string name="absence">Absence</string>
    <string name="absence_desc">Informations About absence</string>
    <string name="contractors">Contractors</string>
    <string name="contractors_desc">Informations about contractors</string>
    <string name="doc">Documentation And Procedures</string>
    <string name="doc_desc">Medical service documentation and procedures</string>
    <string name="prevention_is_better_than_cure">Prevention is better than cure:</string>
    <string name="prevention_is_better_than_cure_content">Don\'t be fooled by the health halo of pecans: A single slice of this pie packs around 500 calories and more than 30 grams of sugar—and that\'s before you add whipped cream or with ice cream.Don\'t be fooled by the health halo of pecans: A single slice of this pie packs around 500 calories and more than 30 grams of sugar—and that\'s before you add whipped cream or with ice cream.Don\'t be fooled by the health halo of pecans: A single slice of this pie packs around 500 calories and more than 30 grams of sugar—and that\'s before you add whipped cream or with ice cream.</string>
    <string name="clinic">Clinic</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="doctor">Doctor:</string>
    <string name="hospital">Hospital</string>
    <string name="sorry_you_have_to_login_before_you_can_see_the_content">Sorry, You have to login before you can see the content</string>
    <string name="title_activity_request_details">RequestDetails</string>
    <string name="title_activity_entity_maps">Map</string>
    <string name="ask_for_medical_request">Ask For Medical Request</string>
    <string name="ask_for_medical_request_title_alert">Ask for medical Request!</string>
    <string name="are_you_sure_of_asking_for_medical_request">Are you sure of asking for medical request On </string>
    <string name="yes_i_m">Yes, I\'m</string>
    <string name="ni_iam_not">No, I\'m not</string>
    <string name="search_by_name">Search By Name</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log out</string>
    <string name="medical_request_title">Medical Request:</string>
    <string name="banque_misr_medical_request_transformation">Banque Misr Medical Transformation</string>
    <string name="the_examination_and_transformation_value_will_be_charged_from_your_account">
        This Transformation will be expired in 15 days, You can\'t create another transformation of the same specialization before 15 days, The examination and transformation value will be charged from your account
    </string>
    <string name="transformation_number">Transformation Number:</string>
    <string name="branch_title">Branch:</string>
    <string name="beneficiary_name_title">Beneficiary Name:</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="address_title">Address:</string>
    <string name="this_transformation_provided_to">This transformation provided to:</string>
    <string name="filter">Filter</string>
    <string name="print">Print</string>
    <string name="transformation">Transformation</string>
    <string name="transformation_date">Transformation Date: </string>
    <string name="name_title">Name:</string>
    <string name="phone_title">Phone:</string>
    <string name="specialization_title">Specialization:</string>
    <string name="service_type_examination_includes_counseling">Service Type: Examination includes counseling</string>
    <string name="transformation_details">Transformation Details</string>
    <string name="employee_information">Employee Information</string>
    <string name="benfituary_name_self">Self</string>
    <string name="sorry_you_have_an_exist_transformation_for_this_specialization_within_15_days">Sorry, you have an exist transformation for this specialization within 15 days</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="hospitals">Hospitals</string>
    <string name="clinics">Clinics</string>
    <string name="filter_by_type">Filter By Type:</string>
    <string name="filter_by_specialization">Filter By Specialization:</string>
    <string name="medical_analysis_title">Medical Analysis Approval</string>
    <string name="medical_rays_title">Medical Rays Approval</string>
    <string name="physical_therapy_title">Physical Therapy Approval</string>
    <string name="dental_approval_title">Dental Approval</string>
    <string name="hospitalization_non_title">Hospitalization For Non-surgical Reasons</string>
    <string name="hospitalization_title">Hospitalization For Surgical Reasons</string>
    <string name="chemotherapy_title">Chemotherapy And Radiotherapy</string>
    <string name="others_approval_title">Others Approval</string>
    <string name="medical_analysis_desc">Approvals for medical analysis</string>
    <string name="medical_rays_desc">Approvals for medical rays</string>
    <string name="physical_therapy_desc">Approvals for physical therapy</string>
    <string name="dental_approval_desc">Approvals for dental</string>
    <string name="hospitalization_non_desc">Approvals for Hospitalization for non-surgical reasons</string>
    <string name="hospitalization_desc">Approvals for Hospitalization for surgical reasons</string>
    <string name="chemotherapy_desc">Approvals for chemotherapy and radiotherapy</string>
    <string name="others_approval_desc">Approvals for Others medical status</string>
    <string name="add_the_request">Add the Request</string>
    <string name="attach_images">Attach Images</string>
    <string name="add_new_request">Add New Request</string>
    <string name="choose_images_text">You must choose your attachment image first</string>
    <string name="attachment_max_4">The Maximum Number of Image is four</string>
    <string name="cairo_regions">Cairo Regions</string>
    <string name="regions">Regions</string>
    <string name="medical_center">Medical Center</string>

    <array name="specialization_type">
        <item>All</item>
        <item>Eye</item>
        <item>Bone</item>
        <item>Kids</item>
    </array>

</resources>
