<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.banquemisr.www.bmmedical.ui.login.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateDuration="60000"
            android:visibility="@{viewModel.login.loginEvent ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/oracle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black_transparent"
            android:hint="@string/oracle"
            android:inputType="textNoSuggestions|number"
            android:paddingStart="60dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:text='@={viewModel.login.oracle}'
            android:textAlignment="viewStart"
            android:textColor="@color/da"
            android:textColorHint="@color/black_transparent_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView6" />


        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="viewStart"
            android:background="@color/black_transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:textColor="@color/da"
            android:textColorHint="@color/black_transparent_hint"
            android:text="@={viewModel.login.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oracle" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/da"
            android:text="@string/action_login"
            android:onClick="@{()->viewModel.onClickLoginButton()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="@+id/txtPassword"
            app:layout_constraintTop_toTopOf="@+id/txtPassword"
            app:srcCompat="@drawable/password_icon" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/oracle"
            app:layout_constraintStart_toStartOf="@+id/oracle"
            app:layout_constraintTop_toTopOf="@+id/oracle"
            app:srcCompat="@drawable/user_icon" />
    </android.support.constraint.ConstraintLayout>

</layout>